Fixed mobile overlap

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -86,23 +86,17 @@ body {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 2rem;
   line-height: 1;
   color: var(--accent);
   letter-spacing: -1px;
 }
 
-h1+h2 {
-  font-size: 1.1rem;
-  opacity: 0.9;
+h2 {
+  font-size: 1.5rem;
   font-weight: 400;
   letter-spacing: 0;
-}
-
-h2 {
-  line-height: 0;
   color: var(--accent-secondary);
-  letter-spacing: -1px;
 }
 
 h3 {
